# ExoNAMD

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/src/: api.rst  conf.py  configuration.rst  developer.rst  examples.rst  index.rst  installation.rst  usage.rst
docs/src/_templates/: index.html  latexstyling.tex  latexstyling_maketitle.tex  user_index.html
exonamd/: __init__.py  catalog.py  core.py  exonamd.py  interp.py  plot.py  run.py  solve.py  utils.py
exonamd/data/: custom_db_20241017e.csv  custom_db_20241227.csv  custom_db_20250811.csv  custom_db_20250811_interp.csv  custom_db_20250811_interp_plus_fakes.csv  custom_db_20250811_interp_plus_lambda.csv  custom_db_20250813_plus_famous_fakes.csv  custom_db_20250814_interp.csv  deleteme.csv  exo.csv  exo_custom_db_20241012.csv  exo_interp.csv  exo_namd.csv  exo_namd_rel_paper.csv  exonamd_psi.csv  exonamd_psiNEW+.csv  exonamd_psiNEW.csv
notebook/: api.ipynb  custom.ipynb  custom_SS.ipynb  paper.ipynb  paper_fig1.ipynb  paper_fig2-3-4.ipynb  paper_fig2-4.ipynb  paper_fig2.ipynb  paper_fig3-5.ipynb  run.ipynb  trunc_normal.ipynb
notebooks/: TOI-942.csv  api.ipynb  create_db.ipynb  exonamd-v01.ipynb  exonamd-v02.ipynb  exonamd-v03.ipynb  exonamd-v04.ipynb  exonamd-v05-plot.ipynb  exonamd-v05-trueoblmm.ipynb  exonamd-v05.ipynb  exonamd-v06.ipynb  exonamd-v07.ipynb  runme.ipynb
notebooks/archive/: data.csv  data_20240725.csv  exonamd-v00.ipynb  exonamd-v01.ipynb  exonamd-v02.ipynb  exonamd-v04.ipynb  exonamd-v05-trueoblmm.ipynb  exonamd-v06-trueoblmm.ipynb
